# galho

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.toml  README.md  caixa.lisp  flake.nix
.github/workflows/: auto-release.yml
crates/galho-cli/: Cargo.toml
crates/galho-cli/src/: lib.rs  main.rs
crates/galho-cli/tests/: cli_smoke.rs  content_hash_determinism.rs  dep_cycle.rs  dep_cycle_proptest.rs  dep_graph_render.rs  dependencies.rs  format_ban_guard.rs  forward_arc.rs  gate.rs  json_output.rs  outcome_emit.rs  persistence.rs  render_state.rs  runtime_proptest.rs  runtime_ref.rs  sync_confirmation.rs
crates/galho-controller/: Cargo.toml
crates/galho-controller/src/: lib.rs
crates/galho-controller/tests/: tick_loop.rs
crates/galho-storage/: Cargo.toml
crates/galho-storage/src/: compliance_verifier.rs  galho_tree.rs  lib.rs  object_store.rs  outcome_chain.rs
crates/galho-storage/src/backends/: local.rs  memory.rs  mod.rs
crates/galho-storage/tests/: compliance_tests.rs  outcome_chain_tests.rs  storage_tests.rs
crates/galho-terraform/: Cargo.toml
crates/galho-terraform/src/: lib.rs  tfstate.rs  translate.rs
crates/galho-terraform/tests/: round_trip.rs
crates/galho-types/: Cargo.toml
crates/galho-types/src/: attractor.rs  canonical.rs  comfort.rs  compliance.rs  config.rs  conflict.rs  cred.rs  derive.rs  error.rs  flow_tier.rs  iac_system.rs  ir.rs  knowledge.rs  lib.rs  merge.rs  morphism.rs  outcome.rs  phase.rs  plan.rs  stack_lock.rs  state.rs  sync.rs  testing.rs  typestate.rs  value.rs
crates/galho-types/tests/: always_restable_matrix.rs  applied_status.rs  attractor_policy.rs  canonical_proptest.proptest-regressions  canonical_proptest.rs  cred_scope.rs  derive_proptest.rs  golden_attractor.rs  merge_proptest.rs  phase_proptest.rs  stack_lock_seal.rs  typed_state_retag.rs  typestate.rs
